--- a/app/src/main/res/layout/activity_insert_plant.xml
+++ b/app/src/main/res/layout/activity_insert_plant.xml
@@ -1,111 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".InsertPlantActivity">
-    <com.google.android.material.appbar.AppBarLayout
-        app:layout_constraintTop_toTopOf="parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:id="@+id/layout_toolbar">
-        <com.google.android.material.appbar.MaterialToolbar
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".InsertPlantActivity">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/layout_toolbar"
+            android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:id="@+id/toolbar"
-            app:titleTextColor="@color/white"
-            app:title="Insert New Plant"/>
-    </com.google.android.material.appbar.AppBarLayout>
+            app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/bt_new_photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                android:layout_width="wrap_content"
+                android:layout_height="?attr/actionBarSize"
+                app:title="Insert New Plant"
+                app:titleTextColor="@color/white" />
+        </com.google.android.material.appbar.AppBarLayout>
 
-        android:text="new"
+        <ImageView
+            android:id="@+id/image_view_insert_plant"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:background="#EEEEEE"
+            android:scaleType="centerCrop"
+            app:layout_constraintTop_toBottomOf="@id/layout_toolbar" />
 
-        app:icon="@drawable/new_photo"
-        app:layout_constraintBottom_toBottomOf="@id/image_view_insert_plant"
-        app:layout_constraintEnd_toStartOf="@id/bt_photo_from_gallery"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/image_view_insert_plant" />
-    <Button
-        android:id="@+id/bt_photo_from_gallery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="gallery"
-       app:icon="@drawable/library_photo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/bt_new_photo"
-        app:layout_constraintTop_toTopOf="@id/image_view_insert_plant"
-        app:layout_constraintBottom_toBottomOf="@id/image_view_insert_plant"/>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        app:layout_constraintTop_toBottomOf="@id/layout_toolbar"
-        android:id="@+id/image_view_insert_plant"
-        android:background="#EEEEEE"
-        android:scaleType="centerCrop"
-        />
-    <EditText
-        android:id="@+id/et_plantname"
-        android:layout_margin="5dp"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Plant Name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image_view_insert_plant"/>
-    <EditText
-        android:id="@+id/et_plantId"
-        android:layout_margin="5dp"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Plant Id"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_plantname"
-        app:layout_constraintEnd_toEndOf="parent"/>
-    <EditText
-        android:id="@+id/et_wateringdetail"
-        android:layout_margin="5dp"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Watering Interval"
-        android:inputType="number"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="4dp">
 
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_plantId"/>
-    <EditText
-        android:id="@+id/et_zonenumber"
-        android:layout_margin="5dp"
-        android:layout_width="0dp"
-        android:inputType="number"
+            <Button
+                android:id="@+id/bt_new_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="new"
 
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:hint="Zone Number"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_wateringdetail"/>
-    <EditText
-        android:id="@+id/et_plantdescription"
-        android:layout_margin="5dp"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:hint="Description"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_zonenumber"/>
-    <Button
-        android:id="@+id/bt_add_new_plant"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="add Plant"/>
+                app:icon="@drawable/new_photo"
+                app:layout_constraintEnd_toStartOf="@id/bt_photo_from_gallery"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/bt_photo_from_gallery"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="gallery"
+                app:icon="@drawable/library_photo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/bt_new_photo"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:hintTextAppearance="@style/HintText"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_plantname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:hint="Plant Name"
+                android:background="@color/white"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:hintTextAppearance="@style/HintText"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_plantId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:hint="Plant Id"
+                android:background="@color/white"
+                /></com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:hintTextAppearance="@style/HintText"
+            app:errorEnabled="true"
+            android:id="@+id/til_wateringdetail"
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_wateringdetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:hint="Watering Interval"
 
 
+                android:background="@color/white"
+
+                /></com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="@color/teal_200"
+
+            app:hintTextColor="@color/teal_200"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_zonenumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+
+                android:hint="Zone Number"
+                android:inputType="number"
+                android:background="@color/white"
+                /></com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:hintTextAppearance="@style/HintText"
+
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_plantdescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:hint="Description"
+                android:background="@color/white"
+                 />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+        <Button
+            android:id="@+id/bt_add_new_plant"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="add Plant"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+
+    </LinearLayout>
+</ScrollView>
